--- a/client/src/components/Screens/Cards/Cards.css
+++ b/client/src/components/Screens/Cards/Cards.css
@@ -3,6 +3,7 @@
 .detailsCard {
     text-align: center;
     width: 40%;
+    cursor: default;
 }
 
 .input {
@@ -11,4 +12,10 @@
 
 .actionButton {
     margin-top: 6%;
+}
+
+.buttonDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
