--- a/client/src/components/Screens/PostCard/PostCard.css
+++ b/client/src/components/Screens/PostCard/PostCard.css
@@ -20,5 +20,9 @@
 }
 
 .cardActionsDiv {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: flex-start;
     margin: 0px 24px;
 }
