--- a/client/src/components/Screens/PostCard/PostCard.css
+++ b/client/src/components/Screens/PostCard/PostCard.css
@@ -1,14 +1,15 @@
 .mainCard {
-    width: 35%;
+    width: 36%;
+    margin: 0px 0px 30px 0px !important
 }
 
 .cardHeader {
-    margin: 0px 24px !important;
+    margin: 0px 12px !important;
 }
 
 .postImageDiv {
-    margin: 5% 0;
-    max-height: 300px;
+    margin: 3% 0;
+    /* max-height: 310px; */
     height: auto;
     overflow: auto;
 }
@@ -22,7 +23,26 @@
 .cardActionsDiv {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     justify-content: flex-start;
-    margin: 0px 24px;
+    margin: 0px 12px;
+}
+
+.cardActionsIcon {
+    font-size: 25px;
+    color: red !important;
+}
+
+.cardActionsCaptionDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.cardActionsUsername {
+    font-weight: 700;
+}
+
+.cardActionsCaption {
+    margin-left: 3%;
 }
