--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: antiquewhite !important;
+    /* background-color: antiquewhite !important; */
     height: 65px !important;
     line-height: 65px !important;
     padding: 0px 150px !important;
@@ -11,8 +11,4 @@
 
 .headerLogo {
     cursor: pointer;
-}
-
-.headerButton {
-    margin: 10px;
 }
