Fixing some UI issue

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -17,3 +17,11 @@
 .logo {
     height: inherit;
 }
+
+.navbarMenuItem {
+    font-size: 16px;
+}
+
+.navbarMenuIcon {
+    /* font-size: 16px; */
+}
