--- a/client/src/components/Screens/Profile/Profile.css
+++ b/client/src/components/Screens/Profile/Profile.css
@@ -1,7 +1,7 @@
 .gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .galleryPhotos {
