--- a/client/src/components/Screens/PostCard/PostCard.css
+++ b/client/src/components/Screens/PostCard/PostCard.css
@@ -34,9 +34,14 @@
     margin: 0px 12px;
 }
 
-.cardActionsIcon {
-    font-size: 25px;
-    color: red !important;
+.cardActionsIconsDiv {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.numberOfLikes {
+    margin-left: 2%;
 }
 
 .cardActionsCaptionDiv {
@@ -70,4 +75,17 @@
 .cardActionsCommentInput:focus {
     /* box-shadow: 0 0 0 2px rgb(24 144 255 / 20%); */
     box-shadow: none !important;
+}
+
+.mainHomeDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
